# component-configs

./: README.md  cluebot-syncer.yaml  cluebot3.yaml  cluebotng-editsets.yaml  cluebotng-monitoring.yaml  cluebotng-review.yaml  cluebotng-staging.yaml  cluebotng-trainer.yaml  cluebotng.yaml  fabfile.py  pyproject.toml  toolforge-functional-runner.yaml  update-ref  update-repository-ref
.github/workflows/: ci.yml  cluebot-syncer.yaml  cluebot3.yaml  cluebotng-editsets.yaml  cluebotng-monitoring.yaml  cluebotng-review.yaml  cluebotng-staging.yaml  cluebotng-trainer.yaml  cluebotng.yaml  setup.yml  toolforge-functional-runner.yaml
config/: general.yaml
config/network-policies/: cluebot3.yaml  cluebotng-monitoring.yaml  cluebotng-review.yaml  cluebotng-staging.yaml  cluebotng-trainer.yaml  cluebotng.yaml
config/static-files/: cluebotng-review.yaml  cluebotng-trainer.yaml  cluebotng.yaml
config/static-files/files/: copy-kube-certs-to-env.sh  copy-worker-credentials-to-env.sh  trove-mysql.sh
config/web-services/: cluebotng-monitoring.yaml  cluebotng-review.yaml  cluebotng-staging.yaml  cluebotng-trainer.yaml
